WIAPASCAL CHANGE LOG
======================

2024/06/04 Renamed Component to Manager, Source to Device; Updated EnumerateDevices; Added FindDevice; Demo uses WIAManager
2024/06/03 Added StiDeviceType to WiaDef; First write of Wia Component
2024/04/05 MaxM - Initial Translation of Windows SDK files (must be completed), TLB Import 